Part of spacing problem fixed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@ $font-main: Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Se
 
 body {
   background: #fff;
+  width: 100%;
 }
 
 #contributions::before {
@@ -63,9 +64,10 @@ footer {
 .footer-wrapper {
   display: inline-block;
   margin-left: 12%;
+  margin-right: 12%;
   margin-top: 40%;
   border-top: 1px solid #F8F8F8;
-  width: 99%;
+  width: 70%;
 }
 
 .github-cat {
@@ -177,6 +179,7 @@ nav {
   color: #666666;
   list-style-type: none;
   margin-left: 30%;
+  margin-right: 0;
 }
 
 .repo-tabs {
